set02/problem05_debug.txt
base) hampana@Hampana set02 % gcc problem05.c
problem05.c:4:9: error: call to undeclared function 'input'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    a = input();
        ^
problem05.c:6:11: error: call to undeclared function 'find_gcd'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    gcd = find_gcd(a,b);     
          ^
problem05.c:7:5: error: call to undeclared function 'output'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    output(a,b,gcd);
    ^
problem05.c:26:6: error: conflicting types for 'output'
void output(int a, int b, int gcd) {
     ^
problem05.c:7:5: note: previous implicit declaration is here
    output(a,b,gcd);
    ^
4 errors generated.
(base) hampana@Hampana set02 % gcc problem05.c
(base) hampana@Hampana set02 % gcc problem05.c -o problem05
lldb ./problem05
(lldb) target create "./problem05"
Current executable set to '/Users/hampana/Documents/c-activity-sets-hampana/set02/problem05' (arm64).
(lldb) r
Process 56022 launched: '/Users/hampana/Documents/c-activity-sets-hampana/set02/problem05' (arm64)
Enter the number:30
Enter the number:60
The gcd of 30 and 60 is 30
Process 56022 exited with status = 0 (0x00000000) 
(lldb) log enable lldb default -f problem05.log
(lldb) b main
Breakpoint 1: where = problem05`main, address = 0x0000000100003d94
(lldb) r
Process 56071 launched: '/Users/hampana/Documents/c-activity-sets-hampana/set02/problem05' (arm64)
Process 56071 stopped
* thread #1, queue = 'com.apple.main-thread', stop reason = breakpoint 1.1
    frame #0: 0x0000000100003d94 problem05`main
problem05`main:
->  0x100003d94 <+0>:  sub    sp, sp, #0x30
    0x100003d98 <+4>:  stp    x29, x30, [sp, #0x20]
    0x100003d9c <+8>:  add    x29, sp, #0x20
    0x100003da0 <+12>: mov    w8, #0x0
Target 0: (problem05) stopped.
(lldb) s
Process 56071 stopped
* thread #1, queue = 'com.apple.main-thread', stop reason = instruction step into
    frame #0: 0x0000000100003d98 problem05`main + 4
problem05`main:
->  0x100003d98 <+4>:  stp    x29, x30, [sp, #0x20]
    0x100003d9c <+8>:  add    x29, sp, #0x20
    0x100003da0 <+12>: mov    w8, #0x0
    0x100003da4 <+16>: str    w8, [sp, #0xc]
Target 0: (problem05) stopped.
(lldb) q
Quitting LLDB will kill one or more processes. Do you really want to proceed: [Y/n] y